src/snapshots/patro_mesh__mail_parser__tests__node_description_parser_should_work-2.snap
---
source: src/mail_parser.rs
expression: "node_description(\"N12\")"
---
Err(
    Error(
        Error {
            input: "",
            code: Float,
        },
    ),
)
