src/snapshots/patro_mesh__mail_parser__tests__node_description_parser_should_work-4.snap
---
source: src/mail_parser.rs
expression: "node_description(\"N12 1,2  23.3 233\")"
---
Err(
    Error(
        Error {
            input: ",2  23.3 233",
            code: MultiSpace,
        },
    ),
)
