src/snapshots/patro_mesh__mail_parser__tests__node_description_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "node_description(\"23\")"
---
Err(
    Error(
        Base {
            location: "23",
            kind: Expected(
                Alpha,
            ),
        },
    ),
)
