src/snapshots/patro_mesh__mail_parser__tests__node_name_parser_should_work-2.snap
---
source: src/mail_parser.rs
expression: "node_name(\"N\")"
---
Err(
    Error(
        Error {
            input: "",
            code: Digit,
        },
    ),
)
