src/snapshots/patro_mesh__mail_parser__tests__node_name_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "node_name(\"23\")"
---
Err(
    Error(
        Error {
            input: "23",
            code: Alpha,
        },
    ),
)
