src/snapshots/patro_mesh__mail_parser__tests__should_parse_node_3d_coords-4.snap
---
source: src/mail_parser.rs
expression: "node_3d_coords(\"   1.0e1  2E+1 3.01E+00 \")"
---
Ok(
    (
        "",
        [
            10.0,
            20.0,
            3.01,
        ],
    ),
)
